Fix alert z-index

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,7 +1,6 @@
 <ng-container *transloco="let t; read: 'home'">
   @if (showChangelogAlert && changelogAlert) {
-  <div class="hero-alert alert alert-info alert-dismissible fade show mb-0 rounded-0 border-0" role="alert"
-    style="z-index: 1050;">
+  <div class="hero-alert alert alert-info alert-dismissible fade show mb-0 rounded-0 border-0" role="alert">
     <div class="container">
       <div class="d-flex align-items-center justify-content-between">
         <div>
