Add adsense banner at deck footer

--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -278,6 +278,11 @@
     <div class="col-12 mt-3">
       <app-library-list *ngIf="deck.library" [libraryList]="deck.library"></app-library-list>
     </div>
+    <!-- Adsense VtesDecks Deck Footer Responsive -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7379021241824282" data-ad-slot="8573339569"
+      data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <div adSense></div>
+    <!-- Adsense End VtesDecks Deck Footer Responsive -->
     <div class="col-12 d-flex justify-content-center mt-3">
       <h2>{{ t('comments') }}</h2>
     </div>
