--- a/src/app/modules/changelog/changelog.component.html
+++ b/src/app/modules/changelog/changelog.component.html
@@ -4,18 +4,19 @@
       <div class="mt-4">
         {{ t('reload_page') }}
       </div>
-      <ng-container *ngIf="(changelog$ | async) as changelogList">
-        <ng-container *ngFor="let changelog of changelogList">
-          <h5 class="mt-4">
-            <span class="p-2 bg-light shadow rounded text-success"> Version {{ changelog.version }}</span> - {{
-            changelog.date }}
-          </h5>
-          <ul class="list mt-3">
-            <li class="text-muted ml-3" *ngFor="let change of changelog.changes"><i
-                class="mdi mdi-circle-medium mr-2"></i><span [innerHTML]="change"></span></li>
-          </ul>
-        </ng-container>
-      </ng-container>
+      @if(changelog$ | async; as changelogList){
+      @for(changelog of changelogList; track changelog.version){
+      <h5 class="mt-4">
+        <span class="p-2 bg-light shadow rounded text-success"> Version {{ changelog.version }}</span> - {{
+        changelog.date }}
+      </h5>
+      <ul class="list mt-3">
+        @for(change of changelog.changes; track change){
+        <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i><span [innerHTML]="change"></span></li>
+        }
+      </ul>
+      }
+      }
     </div>
   </div>
 </div>
